--- a/tools/gator/debian/changelog
+++ b/tools/gator/debian/changelog
@@ -1,3 +1,10 @@
+gator (5.15.1) raring; urgency=low
+
+  * Fix gator-module-dkms install when kernel didn't already include
+    a version of gator. See issue https://cards.linaro.org/browse/ARM-44
+
+ -- Jon Medhurst (Tixy) <jon.medhurst@linaro.org>  Tue, 30 Jul 2013 15:42:43 +0100
+
 gator (5.15.0) raring; urgency=low
 
   * New release from ARM.
